--- a/KetoPlanner.Services/KetoPlanner.Services.csproj
+++ b/KetoPlanner.Services/KetoPlanner.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LanguageExt.Core" Version="3.5.27-beta" />
+  </ItemGroup>
+
 </Project>
