--- a/KetoPlanner.Services/KetoPlanner.Services.csproj
+++ b/KetoPlanner.Services/KetoPlanner.Services.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="LanguageExt.Core" Version="3.5.27-beta" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KetoPlanner.Entities\KetoPlanner.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
